--- a/royal-elementor-kit/style.css
+++ b/royal-elementor-kit/style.css
@@ -4,7 +4,7 @@ Theme URI: https://royal-elementor-addons.com/royal-elementor-kit/
 Author: WP Royal
 Author URI: https://royal-elementor-addons.com/
 Description: Truly all in one Solution For Elementor Lovers. 90+ Elementor Templates KIT, 100+ Professional Elementor Widgets, Elementor theme builder, Elementor Popup Builder, Elementor Premade blocks and many other cool features like Sticky Header, Particle effects, parallax backgrounds and many other elementor addons. Simple Install the theme, click on - Get Started with Templates Kit button and that's it. Very easy to use even for WordPress beginners or professionals. All In one Elementor Solution which outranks all other Elementor themes and Elementor addons. ########### TEMPLATES INCLUDED: Elementor Blog Template, Elementor Magazine Blog Template, Elementor Food Blog Template, Elementor Travel Blog Template, Elementor Portfolio Template, Elementor NFT Template, Elementor Pizza Restaurant Template, Elementor Travel Blogger & Influencer Template, Elementor Cybersecurity Template, Elementor Photographer Portfolio Template, Elementor Crypto Currency Template, Elementor Skin Care Template, Elementor Lawyer Template, Elementor Medical Template, Elementor Digital Agency Template, Elementor Drone Template, Elementro Architecture Template, Elementor Food Delivery Template, Elementor Construction Template, Elementor IT Technology Template, Elementor Real Estate Template, Elementor Restaurant Template, Elementor Wine Bar & Restaurant Template, Elementor Wedding Template & other beautiful elementor business templates. All these templates are created with elementor page builder. Theme Demo Page: https://royal-elementor-addons.com/royal-elementor-kit/
-Version: 1.0.131
+Version: 1.0.132
 Requires at least: 4.7
 Requires PHP: 5.2
 Tested up to: 6.7.2
@@ -541,3 +541,42 @@ dl,dt,dd,ol,ul,li {
 .re-theme-post .post-title a {
 	text-decoration: none;
 }
+
+/* Header Menu */
+.rek-menu .menu-item {
+	position: relative;
+}
+
+.rek-menu .menu-item-has-children > a:after {
+	content: "\25BC";
+	font-size: 8px;
+	margin-left: 5px;
+}
+
+.rek-menu .menu-item-has-children:hover > .sub-menu {
+	display: block;
+}
+
+.rek-menu .sub-menu {
+	display: none;
+	position: absolute;
+	top: 100%;
+	z-index: 9999;
+	min-width: 200px;
+	margin-left: 0;
+	padding: 10px;
+	background-color: #fff;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.rek-menu .sub-menu li {
+	margin-left: 0;
+}
+
+.rek-menu .sub-menu .sub-menu {
+	top: 0;
+	left: 100%;
+	margin-left: 1px;
+}
+
+
